<resources>
    <string name="app_name">NowShowing</string>
    <string name="title_activity_main">NowShowing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">App Logo</string>

    <string name="no_internet">    No network connection!
    This application requires internet access.</string>

    <string name="menu_item1">Home</string>
    <string name="menu_item2">Favourites</string>
    <string name="menu_item3">Account</string>
    <string name="menu_btn">Log Out</string>

    <string name="search_view">Search</string>
    <string name="show_img_description">TV Show Image</string>
    <string name="back_btn_description">Navigate back to previous page</string>

    <string name="details_tab1">Description</string>
    <string name="details_tab2">Episodes</string>

    <string name="status">Status:</string>
    <string name="rating">Rating:</string>
    <string name="add_favourite_btn">Add to Favourites</string>
    <string name="remove_fav_btn">Remove from Favourites</string>

    <string name="next_episode">Next to Watch:</string>
    <string name="ep_img_description">Episode Image</string>
    <string name="checkbox_description">Set episode as watched</string>
    <string name="reset_progress">Reset Show Progress (Unwatch All)</string>

    <string name="season_header">Season</string>
    <string name="ep_count">episodes</string>

    <string name="search_result_header">Results for</string>

    <string name="login_btn">Login</string>
    <string name="login_title">Welcome back!</string>
    <string name="username_field">Username</string>
    <string name="password_field">Password</string>
    <string name="register_prompt">Don\'t have an account?</string>
    <string name="register_now_btn">Register Now</string>

    <string name="register_btn">Register</string>
    <string name="register_title">Create an Account to keep track of your shows!</string>
    <string name="email_field">Email</string>
    <string name="confirm_pw">Confirm Password</string>
    <string name="current_user_key">current_user</string>

    <string name="fav_not_logged_in">Login to add shows to Favourites</string>
    <string name="fav_title">Your Favourite Shows</string>
    <string name="no_favs_message">You do not have any favourites yet!</string>
</resources>