<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainFragments.account.RegisterActivity">

    <include layout="@layout/layout_back_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/field_guideline"
        android:layout_marginBottom="20dp"
        android:paddingHorizontal="20dp"
        android:text="@string/register_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/field_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="174dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username1"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.7"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_guideline"
        android:layout_marginTop="5dp"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        android:hint="@string/username_field">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.7"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username1"
        android:layout_marginTop="5dp"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        android:hint="@string/email_field">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password1"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.7"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:layout_marginTop="5dp"
        app:errorEnabled="true"
        app:endIconMode="password_toggle"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        android:hint="@string/password_field">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.7"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1"
        android:layout_marginTop="5dp"
        app:errorEnabled="true"
        app:endIconMode="password_toggle"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        android:hint="@string/confirm_pw">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/register_btn"
        android:elevation="4dp"
        android:text="@string/register_btn"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        app:strokeColor="@color/md_theme_light_onBackground"
        app:strokeWidth="1dp"
        android:layout_marginTop="5dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>